<resources>
    <string name="app_name">LikeSeries</string>
    <string name="SplasScream">splash</string>
    <!--Menú recordatorio-->
    <string name="action_settings">¿Olvido la contraseña?</string>
    <string name="salirapp">¿Está seguro que quiere salir?</string>
    <!--LOGIN-->
    <string name="LOGIN">LOGIN - LikeSeries</string>
    <string name="correo">Correo:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="isesion">Iniciar Sesión</string>
    <string name="noregistrado">¿No estas registrado?</string>
    <string name="noverificado">¿No ha podido verificar su correo?</string>
    <!--Cambio contraseña-->
    <string name="cambiarcontraseña">Va a enviar un email para cambiar la contraseña</string>
    <string name="olvidocontraseña">Olvidé mi contraseña</string>
    <string name="enviado">Email enviado correctamente</string>
    <string name="emailnovacio">El email no puede estar vacio</string>
    <string name="emailmalformado">El email no esta bien formado</string>
    <string name="errorgeneralemail">No se ha podido mandar el email</string>
    <!--REGISTRO-->
    <string name="REGISTRO">REGISTRO - LikeSeries</string>
    <string name="correor">Su correo electrónico:</string>
    <string name="nombre">Nombre de usuario:</string>
    <string name="nombreerror">Nombre de usuario mal formado</string>
    <string name="contrasenar">Su Contraseña:</string>
    <string name="bregistrar">Registrar Usuario</string>
    <string name="correou">Correo Invalido</string>
    <string name="existente">El usuario ya esta registrado</string>
    <string name="title_activity_registrado">Registrado</string>
    <string name="title_activity_like">LikeSeries</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="emailinvalido">Email invalido</string>
    <string name="contraseñadebil">Contraseña debil</string>
    <string name="usuarioregistrado">Usuario ya registrado</string>
    <string name="usuarioinvalido">Usuario invalido</string>
    <string name="errousuario">Error al registrar usuario</string>
    <string name="acuerdolegal">Acuerdo Legal necesario</string>
    <string name="contraseñarequerida">Contraseña requerida</string>
    <string name="emailrequerido">Email requerido</string>
    <!--Acuerdo-->
    <string name="ComboBox2">Acepto los términos y condiciones de uso</string>
    <!--Perfil -->
    <string name="miperfil">Mi Perfil - LikeSeries</string>
    <string name="nombre_perfil">Nombre de usuario: %1$s</string>
    <string name="bienvenida">Bienvenido %1$s</string>
    <string name="email_perfil">Correo: %1$s</string>
    <string name="datos_perfil">Mis datos</string>
    <string name="olvidotexto_perfil">¿Olvidó su contraseña?,Púlsame</string>
    <string name="cambiarnombre_perfil">¿Cambiar nombre de perfil?</string>

    <!-- Respecto al menu-->
    <string name="votacion_menu">Mis Votaciones</string>
    <string name="pelis_menu">Películas</string>
    <string name="series_menu">Series</string>
    <string name="perfil_menu">Mi perfil</string>
    <string name="cerrarsesion_menu">Cerrar Sesión</string>
    <string name="info_menu">Creador App/Términos</string>
    <string name="tertulia">Tertulia</string>
    <string name="requisitos">Requisitos</string>
    <!--Respecto a la sesion-->
    <string name="cerrarsesion">¿Está seguro de que quiere cerrar sesión %1$s?</string>
    <string name="ok">Aceptar</string>
    <string name="no">Cancelar</string>
    <!--Recycler-->
    <string name="votomas"> Positivos %1$s</string>
    <string name="votomenos"> Negativos %1$s</string>
    <string name="notamedia">Media : %1$s</string>

    <!--Contenedor-->
    <string name="votacionmedia">La nota media es %1$s</string>
    <string name="votantes"> de %1$s votantes</string>
    <string name="nohavotado">Votar -> </string>
    <string name="estaseguro">Usted podra editar su votación</string>
    <string name="eliminarcomentario">Eliminar Comentario</string>
    <string name="seguro">¿Está seguro?</string>
    <string name="delete">Eliminar</string>
    <string name="comenta">Comenta que te ha parecido</string>
    <string name="comentario">Críticas: (%1$s)</string>
    <string name="productora">Producida por %1$s</string>
    <string name="capitulos">Número de capitulos %1$s</string>
    <string name="mostrarmas">Mostrar más</string>
    <string name="direccion">Director %1$s</string>
    <string name="mostrarmenos">Mostrar menos</string>
    <string name="fechae">Fecha de estreno %1$s</string>
    <string name="duracionhoras">Duración en horas %1$s</string>
    <string name="duracionminutos">Duración en minutos %1$s</string>
    <string name="trailer">Púlsame para ver el trailer</string>
    <string name="actor_peli">Actores</string>
    <!--Voto-->
    <string name="mispositivos">Me han gustado (%1$s)</string>
    <string name="misnegativos">No me han gustado (%1$s)</string>

    <string name="votar">Votar</string>

    <string name="title_activity_fullscreen_youtube">FullscreenActivityYoutube</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_full_screen_youtube">FullScreenYoutube</string>
    <!--Trailer-->
    <string name="toolbarTrailer">Trailer-LikeSeries</string>
    <!--ChatRapido-->
    <string name="eliminarmensaje">Eliminar mensaje</string>
    <string name="cerrarchat">Cerrar chat</string>
    <string name="Respeta">Respeta a los demas en el chat general</string>
    <string name="eliminartodo_administrador">Vaciar chat</string>
    <string name="title_activity_administrador">Administrador</string>
    <!--Administrador-->
    <string name="titulo_Administración">Administración - LikeSeries</string>
    <string name="insertar_pelicula_admin">Insertar Pelicula</string>
    <string name="insertar_serie_admin">Insertar Serie</string>

    <string name="trailer_peli">Trailer Pelicula</string>
    <string name="titulo_peli">Titulo Pelicula</string>
    <string name="descripcion_peli">Descripción Pelicula</string>
    <string name="genero_peli">Género Pelicula</string>
    <string name="productora_peli">Productora Pelicula</string>
    <string name="imagen_peli">Imagen Pelicula</string>
    <string name="director_peli">Director Pelicula</string>
    <string name="duración_peli">Duración Pelicula</string>
    <string name="estreno_peli">Estreno Pelicula</string>

    <string name="trailer_serie">Trailer Serie</string>
    <string name="titulo_serie">Titulo Serie</string>
    <string name="descripcion_serie">Descripción Serie</string>
    <string name="genero_serie">Género Serie</string>
    <string name="productora_serie">Productora Serie</string>
    <string name="imagen_serie">Imagen Serie</string>
    <string name="director_serie">Director Serie</string>
    <string name="duración_serie">Duración Serie</string>
    <string name="primeraEmision_serie">Primera emisión Serie</string>
    <string name="numero_capitulos">Número capítulos Serie</string>
    <!--Info-->
    <string name="tituloinfo">Info-LikeSeries</string>
    <!--Requisitos-->
    <string name="titulorequisito">Requisitos-LikeSeries</string>
    <!--Tertulia-->
    <string name="titulotertulia">Tertulia - LikeSeries</string>
    <string name="nombretertulia">Nombre Tertulia</string>
    <string name="iniciotertulia">Inicio Tertulia</string>
    <string name="fintertulia">Fin de la Tertulia</string>
    <string name="activartertulia">Activar Tertulia</string>
    <string name="administrartertulia">Administrar Tertulias</string>
</resources>
