<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado1"
    android:keepScreenOn="false"
    android:orientation="vertical">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombretitulo"
                style="@style/EstiloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/nombre"
                android:textColor="@color/letras"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nombre"
                style="@style/EstiloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/letras" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email"
                style="@style/EstiloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/correor"
                android:textColor="@color/letras"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/temailregistro"
                style="@style/EstiloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textEmailAddress"
                android:textColor="@color/letras" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contrasena"
                style="@style/EstiloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/contrasena"
                android:textColor="@color/letras"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/tcontrasenaregistro"
                style="@style/EstiloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/letras" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/acuerdolegal"
                style="@style/EstiloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ComboBox2"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/registrar"
                style="@style/EstiloRegistro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:text="@string/bregistrar"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>